Add html for recipe list and recipe details

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,34 @@
-<p>
-  recipe-detail works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" class="img-fluid">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>Nazwa Przepisu</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle">Zarządzaj przepisem <span></span> </button>
+      <ul class="dropdown-menu">
+        <li>
+          <a href="#">Dodaj do listy zakupów</a>
+          <a href="#">Edytuj przepis</a>
+          <a href="#">Usuń przepis</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Opis
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Składniki
+  </div>
+</div>
