--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,10 +34,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Przepisy</a>
+          <a class="nav-link" href="#" (click)="onSelect('recipe')">Przepisy</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Lista Zakupów</a>
+          <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Lista Zakupów</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
