--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,10 +41,10 @@
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown ">
+        <li class="nav-item dropdown" appDropdown>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
              aria-haspopup="true" aria-expanded="false">
-            Zarzadzanie
+            Menu zarządzania
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">Zapisz Dane</a>
