--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,30 +1,39 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" class="img-fluid">
+    <img
+      [src]="recipe.imagePath"
+      alt="{{recipe.name}}"
+      class="img-fluid"
+      style="max-height: 400px"
+    >
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Nazwa Przepisu</h1>
+    <h1>{{recipe.name}}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
-      <button type="button" class="btn btn-primary dropdown-toggle">Zarządzaj przepisem <span></span> </button>
-      <ul class="dropdown-menu">
-        <li>
-          <a href="#">Dodaj do listy zakupów</a>
-          <a href="#">Edytuj przepis</a>
-          <a href="#">Usuń przepis</a>
-        </li>
-      </ul>
+
+    <div class="dropdown">
+      <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+         aria-haspopup="true" aria-expanded="false">
+        Zarządzaj Przepisem
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="#">Dodaj do listy zakupów</a>
+        <a class="dropdown-item" href="#">Edytuj przepis</a>
+        <a class="dropdown-item" href="#">Usuń przepis</a>
+      </div>
     </div>
+
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Opis
+    {{ recipe.description }}
   </div>
 </div>
 <div class="row">
@@ -32,3 +41,4 @@
     Składniki
   </div>
 </div>
+
