--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,22 +6,11 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="list-group">
-      <a
-        href="#"
-        class="list-group-item list-group-item-action"
-        *ngFor="let recipe of recipes">
-        <div class="d-flex w-100 justify-content-between">
-          <h4 class="mb-1 mr-auto">{{recipe.name}}</h4>
-        </div>
-        <div class="d-flex justify-content-between">
-          <div class="p-0">{{recipe.description}}</div>
-          <div class="p-0"><img [src]="recipe.imagePath" alt="{{recipe.name}}" class="float-right"
-                                style="max-height: 80px;"></div>
-        </div>
-      </a>
-    </div>
-    <app-recipe-item></app-recipe-item>
+
+    <app-recipe-item
+      *ngFor="let recipeEl of recipes"
+      [recipe]="recipeEl"
+      (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipe-item>
   </div>
 </div>
 
