--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,26 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Nazwa</label>
-          <input type="text" id="name" class="form-control">
+          <input
+            type="text"
+            id="name"
+            class="form-control"
+            #nameInput
+          >
         </div>
-        <div class="col-sm-2 form-group">
+        <div class="col-sm-3 form-group">
           <label for="amount">Ilość</label>
-          <input type="number" id="amount" class="form-control">
+          <input
+            type="number"
+            id="amount"
+            class="form-control"
+            #amountInput
+          >
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success mr-2 ml-3" type="submit">Dodaj</button>
+          <button class="btn btn-success mr-2 ml-3" type="submit" (click)="onAddItem()">Dodaj</button>
           <button class="btn btn-danger mr-2" type="button">Usuń</button>
           <button class="btn btn-primary mr-2" type="button">Wyczyść</button>
         </div>
