--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,15 +1,22 @@
+
 <div class="list-group">
   <a
-    href="#"
+    style="cursor: pointer"
     class="list-group-item list-group-item-action"
-    (click)="onSelected()">
-    <div class="d-flex w-100 justify-content-between">
-      <h4 class="mb-1 mr-auto">{{recipe.name}}</h4>
-    </div>
-    <div class="d-flex justify-content-between">
-      <div class="p-0">{{recipe.description}}</div>
-      <div class="p-0"><img [src]="recipe.imagePath" alt="{{recipe.name}}" class="float-right"
-                            style="max-height: 80px;"></div>
+    [routerLink]="[index]"
+    routerLinkActive="active"
+    >
+
+    <div class="row">
+      <div class="col-9">
+        <h4 class="mb-1 mr-auto">{{recipe.name}}</h4>
+        <div class="p-0">{{recipe.description}}</div>
+      </div>
+      <div class="col-3 m-0 p-0">
+        <div class="p-0 ml-0 float-right"><img [src]="recipe.imagePath" alt="{{recipe.name}}"
+                              style="max-height: 100px; max-width: 100px"></div>
+      </div>
+
     </div>
   </a>
 </div>
