--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row pb-3">
   <div class="col-xs-12">
-    <button class="button btn btn-success">Nowy przepis</button>
+    <button class="button btn btn-success" (click)="onNewRecipe()">Nowy przepis</button>
   </div>
 </div>
 
@@ -8,8 +8,11 @@
   <div class="col-xs-12">
 
     <app-recipe-item
-      *ngFor="let recipeEl of recipes"
-      [recipe]="recipeEl"></app-recipe-item>
+      *ngFor="let recipeEl of recipes; let i = index"
+      [recipe]="recipeEl"
+      [index]="i">
+
+    </app-recipe-item>
   </div>
 </div>
 
