--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success mr-2 ml-3" type="submit" (click)="onAddItem()">Dodaj</button>
+          <button class="btn btn-success mr-2 ml-3" type="button" (click)="onAddItem()">Dodaj</button>
           <button class="btn btn-danger mr-2" type="button">Usuń</button>
           <button class="btn btn-primary mr-2" type="button">Wyczyść</button>
         </div>
