--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header (featureSelected)="onNavigate($event)" ></app-header>
 
-<div class="container">
+<div class="container-fluid p-5">
   <div class="row">
     <div class="col-md-12">
       <router-outlet></router-outlet>
