--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,81 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-12">
+    <form>
+      <div class="row">
+        <div class="col-12">
+          <button type="submit" class="btn btn-success mr-2">Zapisz</button>
+          <button type="button" class="btn btn-danger">Anuluj</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <div class="form-group">
+            <label for="name">Nazwa</label>
+            <input
+              type="text"
+              id="name"
+              class="form-control"
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <div class="form-group">
+            <label for="imagePath">URL Obrazka</label>
+            <input
+              type="text"
+              id="imagePath"
+              class="form-control"
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <img src="" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <div class="form-group">
+            <label for="description">Opis</label>
+            <textarea
+              type="text"
+              id="description"
+              class="form-control"
+              rows="6"
+            ></textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-8">
+              <input
+                type="text"
+                class="form-control"
+              >
+            </div>
+            <div class="col-2">
+              <input
+                type="number"
+                class="form-control"
+              >
+            </div>
+            <div class="col-2">
+              <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
