--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,11 +1,11 @@
 <div class="row pb-3">
-  <div class="col-xs-12">
+  <div class="col-12">
     <button class="button btn btn-success" (click)="onNewRecipe()">Nowy przepis</button>
   </div>
 </div>
 
-<div class="row">
-  <div class="col-xs-12">
+<div class="row mr-5">
+  <div class="col-12">
 
     <app-recipe-item
       *ngFor="let recipeEl of recipes; let i = index"
