--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-10">
-    <form>
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Nazwa</label>
@@ -8,7 +8,9 @@
             type="text"
             id="name"
             class="form-control"
-            #nameInput
+            name="name"
+            ngModel
+            required
           >
         </div>
         <div class="col-sm-3 form-group">
@@ -17,15 +19,22 @@
             type="number"
             id="amount"
             class="form-control"
-            #amountInput
+            name="amount"
+            ngModel
+            pattern="^[1-9]+[1-9]*$"
+            required
           >
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success mr-2 ml-3" type="button" (click)="onAddItem()">Dodaj</button>
-          <button class="btn btn-danger mr-2" type="button">Usuń</button>
-          <button class="btn btn-primary mr-2" type="button">Wyczyść</button>
+          <button class="btn btn-success mr-2 ml-3" type="submit" [disabled]="!f.valid" >{{editMode ? 'Edycja' : 'Dodaj'}}</button>
+          <button class="btn btn-danger mr-2"
+                  type="button"
+                  (click)="onDelete()"
+                  *ngIf="editMode"
+          >Usuń</button>
+          <button class="btn btn-primary mr-2" type="button" (click)="onClear()">Wyczyść</button>
         </div>
       </div>
     </form>
